[package]
name = "rust-tokio-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.94"
axum = "0.6.10"
deadpool-postgres = "0.10.5"
tokio-postgres = "0.7.7"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"]}
dotenv = "0.15.0"
